<resources>
    <string name="app_name">AirBinbi</string>
    <string name="menu_item_1">Explorer</string>
    <string name="menu_item_2">Favoris</string>
    <string name="menu_item_3">Voyages</string>
    <string name="menu_item_4">Messages</string>
    <string name="menu_item_5">Connexion</string>
    <string name="search">Où allez-vous ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>